Updated to new LibGdx